Changed files to compile in Java 11